[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/spell/spell/spell_template.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/spell/lava_potion.png" type="Texture" id=2]
[ext_resource path="res://scripts/spell/spell/lava_floor.gd" type="Script" id=3]
[ext_resource path="res://assets/spell/lava_floor.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0832

[node name="LavaFloor" instance=ExtResource( 1 )]
z_index = -1
script = ExtResource( 3 )
can_kill = false
weapon_dict_key = "lava_floor_damage"
lava_floor = ExtResource( 4 )

[node name="Texture" parent="." index="0"]
texture = ExtResource( 2 )

[node name="Collision" parent="." index="1"]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Notifier" parent="." index="2"]
visible = false

[node name="Lifetime" type="Timer" parent="." index="3"]
one_shot = true

[node name="ThrowLifetime" type="Timer" parent="." index="4"]
wait_time = 1.5
one_shot = true
autostart = true

[node name="AttackCooldown" type="Timer" parent="." index="5"]

[connection signal="area_exited" from="." to="." method="on_area_exited"]
[connection signal="timeout" from="Lifetime" to="." method="on_lifetime_timeout"]
[connection signal="timeout" from="ThrowLifetime" to="." method="on_throw_lifetime_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="on_attack_cooldown_timeout"]
